--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-quill": "^2.0.0"
   },
   "devDependencies": {
